# rules-py-example

./: .bazelrc  .gitignore  .pylintrc  BUILD.bazel  MODULE.bazel  README.md  dataset.py  graph.py  graph_test.py  openai_codelab.py  requirements.in  requirements.txt  requirements_lock_darwin.txt
