load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pypi//:requirements.bzl", "requirement")
load(
    "@pypi//:requirements.bzl",
    "requirement",
)
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    extra_args = [
        "--allow-unsafe",
        "--generate-hashes",
        "--reuse-hashes",
        "--resolver=backtracking",
    ],
    requirements_darwin = "requirements_lock_darwin.txt",
    requirements_in = "requirements.in",
)

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "warn",
)

py_binary(
    name = "dataset",
    srcs = ["dataset.py"],
    deps = [
        requirement("tensorflow"),
        requirement("numpy"),
    ],
)
